[project]
name = "my-hello-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=1.1.6",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
hello_agents_llm = "my_hello_agent.hello_agents_llm:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
