[project]
name = "my-hello-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "google-search-results>=2.4.2",
    "hello-agents[all]==0.2.8",
    "openai>=1.0.0,<2.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "tavily-python==0.7.12",
]

[project.scripts]
hello_agents_llm = "my_hello_agent.hello_agents_llm:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
